# python-project-template

./: .gitignore  README.md  create_new_project.py  pyproject.toml
src/sample/: __init__.py  __main__.py  main.py  utils.py
tests/: test_utils.py
