[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample"
version = "0.1.0"
description = "A small example package created by the scaffold script"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = []

[project.scripts]
sample = "sample:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
